[package]
name = "sway-alttab"
version = "0.1.0"
authors = ["reisub0 <reisub0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swayipc = {"version" = "^2.2.3", "features" = ["async"]}
signal-hook = {"version" = "^0.1"}
