[package]
name = "sway-alttab"
description = "Simple Alt-Tab daemon for SwayWM. Switches back to previous focused window on SIGUSR1"
version = "1.1.2"
authors = ["Govind KP <reisub0@gmail.com>"]
repository = "https://github.com/reisub0/sway-alttab"
readme = "./README.md"
license = "MIT"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["sway", "swayipc", "i3"]

[badges]
is-it-maintained-issue-resolution = { repository = "reisub0/sway-alttab" }
is-it-maintained-open-issues = { repository = "reisub0/sway-alttab" }
maintenance = { status = "actively-developed" }

[profile.release]
codegen-units = 1
lto = true

[dependencies]
i3ipc = {"version" = "^0.10.1"}
signal-hook = {"version" = "^0.1"}
daemonize = { "version" = "^0.4" }

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]
